{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 23,
  "lineage": "17fbd180-db7a-77dd-c971-9163cb30f9ae",
  "resources": [
    {
      "module": "module.jenkins_master_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:security-group/sg-0d3bd554070d70b7c",
            "description": "Security group that allows Jenkins master access only and all egress traffic",
            "egress": [],
            "id": "sg-0d3bd554070d70b7c",
            "ingress": [],
            "name": "jenkins-master-sg-dev-20210916144607713800000002",
            "name_prefix": "jenkins-master-sg-dev-",
            "owner_id": "052776272001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-master-sg-dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jenkins-master-sg-dev",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3abc1e8806c5c4c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.jenkins_master_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Internet",
            "from_port": 0,
            "id": "sgrule-3569398725",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d3bd554070d70b7c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins_master_sg.aws_security_group.this",
            "module.jenkins_master_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_master_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.1.0/24"
            ],
            "description": "From the office only",
            "from_port": 80,
            "id": "sgrule-1056043467",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d3bd554070d70b7c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins_master_sg.aws_security_group.this",
            "module.jenkins_master_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.1.0/24"
            ],
            "description": "From the office only",
            "from_port": 8080,
            "id": "sgrule-1169935274",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d3bd554070d70b7c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins_master_sg.aws_security_group.this",
            "module.jenkins_master_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.1.0/24"
            ],
            "description": "From the office only",
            "from_port": 443,
            "id": "sgrule-2578071742",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d3bd554070d70b7c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins_master_sg.aws_security_group.this",
            "module.jenkins_master_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.1.0/24"
            ],
            "description": "From the office only",
            "from_port": 22,
            "id": "sgrule-2996383989",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d3bd554070d70b7c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins_master_sg.aws_security_group.this",
            "module.jenkins_master_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_slaves_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:security-group/sg-0fd1675452450149b",
            "description": "Security group that allows Jenkins master subnet access (for monitoring later) and all egress traffic",
            "egress": [],
            "id": "sg-0fd1675452450149b",
            "ingress": [],
            "name": "jenkins-slaves-sg-dev-20210916144607713800000001",
            "name_prefix": "jenkins-slaves-sg-dev-",
            "owner_id": "052776272001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-slaves-sg-dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jenkins-slaves-sg-dev",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3abc1e8806c5c4c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.jenkins_slaves_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Internet",
            "from_port": 0,
            "id": "sgrule-887528483",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0fd1675452450149b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins_slaves_sg.aws_security_group.this",
            "module.jenkins_slaves_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_slaves_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.3.0/24"
            ],
            "description": "From the office only",
            "from_port": 22,
            "id": "sgrule-2114706526",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fd1675452450149b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins_slaves_sg.aws_security_group.this",
            "module.jenkins_slaves_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.3.0/24"
            ],
            "description": "JNLP from Jenkins master",
            "from_port": 49187,
            "id": "sgrule-3840451832",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fd1675452450149b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 49187,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins_slaves_sg.aws_security_group.this",
            "module.jenkins_slaves_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-09e2977969eab53ef",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-16-173-66.us-east-2.compute.amazonaws.com",
            "public_ip": "3.16.173.66",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "jenkins-vpc-dev-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jenkins-vpc-dev-us-east-2a",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:internet-gateway/igw-0c0cb57e101f5dc1e",
            "id": "igw-0c0cb57e101f5dc1e",
            "owner_id": "052776272001",
            "tags": {
              "Name": "jenkins-vpc-dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jenkins-vpc-dev",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f3abc1e8806c5c4c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09e2977969eab53ef",
            "connectivity_type": "public",
            "id": "nat-0f13ec5fbc6f9b5f9",
            "network_interface_id": "eni-0553fb7773f69703c",
            "private_ip": "10.0.1.15",
            "public_ip": "3.16.173.66",
            "subnet_id": "subnet-0fd6fa11d56a79e65",
            "tags": {
              "Name": "jenkins-vpc-dev-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jenkins-vpc-dev-us-east-2a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-030d6970f8a1f60b21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f13ec5fbc6f9b5f9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-030d6970f8a1f60b2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c0cb57e101f5dc1e",
            "id": "r-rtb-0edef86055942c5781080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0edef86055942c578",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:route-table/rtb-030d6970f8a1f60b2",
            "id": "rtb-030d6970f8a1f60b2",
            "owner_id": "052776272001",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "jenkins-vpc-dev-private",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jenkins-vpc-dev-private",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f3abc1e8806c5c4c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:route-table/rtb-0edef86055942c578",
            "id": "rtb-0edef86055942c578",
            "owner_id": "052776272001",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "jenkins-vpc-dev-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jenkins-vpc-dev-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f3abc1e8806c5c4c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a46e5c0fa63eb4e",
            "route_table_id": "rtb-030d6970f8a1f60b2",
            "subnet_id": "subnet-06b02c46e4af1cd93"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d046a549e9960c94",
            "route_table_id": "rtb-0edef86055942c578",
            "subnet_id": "subnet-0fd6fa11d56a79e65"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:subnet/subnet-06b02c46e4af1cd93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-06b02c46e4af1cd93",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052776272001",
            "tags": {
              "Name": "jenkins-vpc-dev-private-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jenkins-vpc-dev-private-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f3abc1e8806c5c4c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:subnet/subnet-0fd6fa11d56a79e65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0fd6fa11d56a79e65",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "052776272001",
            "tags": {
              "Name": "jenkins-vpc-dev-public-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jenkins-vpc-dev-public-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f3abc1e8806c5c4c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:vpc/vpc-0f3abc1e8806c5c4c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09f694b0076ca3536",
            "default_route_table_id": "rtb-0b0bc5b7d75fc3271",
            "default_security_group_id": "sg-04842f568f2a6b9ee",
            "dhcp_options_id": "dopt-5513733e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f3abc1e8806c5c4c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b0bc5b7d75fc3271",
            "owner_id": "052776272001",
            "tags": {
              "Name": "jenkins-vpc-dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jenkins-vpc-dev",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}